Fix nav breakpoint wrapping, add drop shadow to headings

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.font-black {
+  text-shadow: 2px 2px 0px #5c4610, 4px 4px 8px rgba(0, 0, 0, 0.6);
+}
+
 @keyframes fadeInUp {
   from {
     opacity: 0;
